# 808s_Text_Editor

./: .gitignore  CMakeLists.txt  README.md
include/: EditorWindow.hpp  FileHandler.hpp  GUI.hpp  MainWindow.hpp  PieceTable.hpp  logic.hpp  test.hpp
src/: 808s.cpp  EditorWindow.cpp  FileHandler.cpp  GUI.cpp  MainWindow.cpp  PieceTable.cpp  test.cpp
